<resources>
    <string name="app_name">Hue &amp; Me</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragments_groups">Groups</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="navigation_item_1">First navigation item</string>
    <string name="navigation_item_2">Second navigation item</string>
    <string name="lights_text_helloworld">Hello LightsFragment</string>
    <string name="groups_text_helloworld">Hello GroupsFragment</string>
    <string name="info_text_helloworld">Hello InfoFragment</string>
    <string name="philips_hue_loading">Philips Hue is starting…</string>
    <string name="navitem_groups">Groepen</string>
    <string name="navitem_lights">Lampen</string>
    <string name="navitem_info">Info</string>
    <string name="navitem_starting">Thank you for your patience</string>
    <string name="navheader_state_searching_for_bridges">Zoeken naar bridges…</string>
    <string name="navitem_nobridge">Er zijn nog geen bridges verbonden</string>
    <string name="navheader_state_no_bridges_connected">Geen bridges verbonden</string>
    <string name="nobridges_noneselected_text">Er is geen bridge verbonden</string>
    <string name="nobridges_startscan_text">Zoek bridges</string>
    <string name="scanning_text_scanning">Zoeken naar Hue bridges…</string>
    <string name="item_ap_button_text">Verbinden</string>
    <string name="item_ap_emptylist">Nog geen bridges gevonden</string>
    <string name="scanning_text_connecting">Verbinden met Hue bridge…</string>
    <string name="scanning_text_authrequired">Configuratie mislukt</string>
    <string name="nobridges_instruction_presspushlink">Druk op de knop op uw bridge en verbind opnieuw</string>
    <string name="scanning_text_bridgesfound">Deze Hue bridges zijn gevonden</string>
    <string name="scanning_text_success">Het verbinden is gelukt!</string>
    <string name="scanning_btn_successcontinue">Ga verder</string>
    <string name="header_statemessage_connected">Verbonden met Hue</string>
    <string name="groups_title_text">Groepen</string>
    <string name="groups_item_nonefound">Er zijn geen bestaande groepen</string>
    <string name="groups_subtitle_text">Alle groepen in Philips Hue</string>
    <string name="philips_hue_connecting">Philips Hue probeert te verbinden</string>
    <string name="groups_text_nogroupsfound">Geen groepen gevonden</string>
    <string name="groupdetail_onofftext_text">In-/uitschakelen</string>
    <string name="title_activity_group_detail">GroupDetailActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="groupdetail_colorlooptext_text">Colorloop</string>
    <string name="groupdetail_changenamebutton_text">Wijzig</string>
    <string name="groupdetail_deletegroupbutton_text">Verwijder groep uit Hue</string>
    <string name="groupdetail_changename_error_emptyname">Vul een groepsnaam in</string>
    <string name="groupdetail_deletegroup_confirm_title">Groep verwijderen</string>
    <string name="groupdetail_deletegroup_confirm_message">Deze actie kan niet ongedaan gemaakt worden.</string>
    <string name="groupdetail_deletegroup_confirm_ok">Bevestigen</string>
    <string name="groupdetail_deletegroup_confirm_cancel">Annuleren</string>
    <string name="toolbar_lights_search">Zoeken</string>
    <string name="addgroup_title_text">Nieuwe groep</string>
    <string name="addgroup_subtitle_text">Kies lampen om een nieuwe groep te maken</string>
    <string name="addgroup_savebutton_text">Opslaan</string>
    <string name="adapter_lightsselectable_nolights">Er zijn geen lichten in uw Hue netwerk</string>
    <string name="addgroup_lights_noneselected">U moet tenminste één lamp selecteren</string>
    <string name="addgroup_groupname_hint">Vul een groepsnaam in…</string>
    <string name="addgroup_name_empty">U heeft geen groepsnaam opgegeven</string>
    <string name="addgroup_snackbar_success">Nieuwe groep aangemaakt!</string>
    <string name="addgroup_snackbar_undo">Undo</string>
    <string name="groups_nogroups_text">Geen groepen in uw Hue netwerk</string>
    <string name="toolbar_addgroup_cancel">Terug</string>
    <string name="lights_title_text">Lichten</string>
    <string name="lights_subtitle_text">Alle lichten in Philips Hue</string>
    <string name="lights_nolights_text">Geen lichten in uw Hue netwerk</string>
</resources>
