<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/navitem_groups"
            android:checked="true"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/navitem_groups"
            android:visible="false" />

        <item
            android:id="@+id/navitem_lights"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/navitem_lights"
            android:visible="false" />

        <item
            android:id="@+id/navitem_info"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/navitem_info"
            android:visible="false" />

    </group>
</menu>